@@ -113,7 +113,9 @@ export(xy)
 import(dplyr)
 import(gap.datasets)
 importFrom(Rdpack,reprompt)
+importFrom(grDevices,dev.off)
 importFrom(grDevices,palette)
+importFrom(grDevices,pdf)
 importFrom(grDevices,xy.coords)
 importFrom(graphics,abline)
 importFrom(graphics,arrows)
